--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+#local files to be generated
+fr.json
+sentences.json
+senteng.json
+trial.py
+tmp.py
+temp.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
