--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ senteng.json
 trial.py
 tmp.py
 temp.py
+monte.py
+monte.json
+ex.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
